--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,5 +1,7 @@
 //Mixins
 @mixin main-container {
   min-height: 80vh;
+  display: flex;
+  flex-direction: column;
   background-color: variables.$grey-background;
 }
